--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ html {
         <!-- </div> -->
 
     <!-- Scripts -->
-    <script src="http://wata.pimmey.com/scripts/config.js"></script>
-    <script src="http://wata.pimmey.com/scripts/build.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/build.js"></script>
 </section>
 <div id="about1">&nbsp;</div>
 <div>&nbsp;</div>
