--- a/index.html
+++ b/index.html
@@ -574,16 +574,15 @@ The belief that customer satisfaction is as important as their products and serv
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fa fa-map-marker"></i>
-                    <p style="color: white;"> Patil Nursery, Veer Savarkar Marg, Badlapur West, Mumbai - 421503, Opp King George School Arunodaya Nagar</p>
+                    <p style="color: white;">Sanyog Park, Hendrepada, kulgaon, Badlapur West, Mumbai - 421503, Nr. Bharat College</p>
                 </li>
 
                 <li><i class="fa fa-phone "></i>
-                    <p style="color: white;">+91 9527639935<br>
-+91 7030665933 </p>
+                    <p style="color: white;">+91 7030665933 </p>
                 </li>
 
                 <li><i class="fa fa-envelope"></i>
-                    <p style="color: white;">info@anetazo.com</p>
+                    <p style="color: white;">ghimirerahul@gmail.com</p>
                 </li>
             </ul>
         </div>
@@ -726,11 +725,11 @@ The belief that customer satisfaction is as important as their products and serv
         <p>
           <i class="fa fa-home mr-3"></i> Mumbai, MH 421503, India</p>
         <p>
-          <i class="fa fa-envelope mr-3"></i> info@anetazo.com</p>
+          <i class="fa fa-envelope mr-3"></i> ghimirerahul@gmail.com.com</p>
         <p>
-          <i class="fa fa-phone mr-3"></i>+919527639935</p>
+          <i class="fa fa-phone mr-3"></i>+917030665933</p>
         <p>
-          <i class="fa fa-print mr-3"></i>+917030665933</p>
+          <!-- <i class="fa fa-print mr-3"></i>+917030665933</p> -->
 
       </div>
       <!-- Grid column -->
