--- a/index.html
+++ b/index.html
@@ -601,8 +601,9 @@ The belief that customer satisfaction is as important as their products and serv
 <div>&nbsp;</div>
 <div>&nbsp;</div>
 <div>&nbsp;</div>
+<div>&nbsp;</div>
 <!----------------------------------------Footer--------------------------------------->
-<section>
+<section><br>
 
 
  <!-- Footer -->
