--- a/index.html
+++ b/index.html
@@ -2,17 +2,8 @@
 	<head>		
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initail-scale=1.0">
-    <!---------------meta tags---------------------->
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Anetazo</title>
-    <meta http-equiv="content-type" content="text/html"; charset="utf-8"/>
-    <meta name="Copyright" content="WordStream is a registered trademark of WordStream, Inc. C"/>
-    <meta name="description" content="Meta tags can have a larger impact on SEO and your website"/>
-    <meta name="keywords" content="meta tags, meta tag, meta tags seo, meta tags definition , what"/> 
-    <meta name="robots" content="index,follow"/>   
-    <meta name="DC.title" content="how a meta tag impacts seo &amp; ppc" >
-   <!---------------------End-------------------->
-		
+   
+  
 		<link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
@@ -155,21 +146,6 @@ html {
 			<p style="font-size: 25px;font-family: Futura,Trebuchet MS,Arial,sans-serif; line-height: 1.0;">and precise service that really help to grow your business.</p>
 			<p style="font-size: 25px;font-family: Futura,Trebuchet MS,Arial,sans-serif; line-height: 1.0;">Feel free to check out our works and contact us.</p></center></div><br><br>
 				
-			 <!-- <div class ="col-md-6"> -->
-    <!---columns -	--->  
-			<!-- <div class="about-content" style="padding: 30px;">
-<p >Established in the year 2006, Samarth Krupa Enterprises in Mulund, Mumbai is a top player in the category Plant Nurseries in Mulund, Mumbai. This well-known establishment acts as a one-stop destination servicing customers both local and from other parts of Mumbai. Over the course of its journey, this business has established a firm foothold in it’s industry.
-
-The belief that customer satisfaction is as important as their products and services, have helped this establishment garner a vast base of customers, which continues to grow by the day.</p>
-<button type="button" class="btn btn-primary">Read More...</button>		
-			</div>
-			</div>
-			<div class ="col-md-6 ">--->  
-
-    <!---columns --->    
-		<!-- <center><img class="img" src="img/15.jpg" ></center>
-		</div>
-	</section> -->
 <div class="container">
 <div class="row1">
   <div class="column1">
@@ -726,7 +702,7 @@ The belief that customer satisfaction is as important as their products and serv
         <p>
           <i class="fa fa-home mr-3"></i> Mumbai, MH 421503, India</p>
         <p>
-          <i class="fa fa-envelope mr-3"></i> ghimirerahul@gmail.com.com</p>
+          <i class="fa fa-envelope mr-3"></i> ghimirerahul@gmail.com</p>
         <p>
           <i class="fa fa-phone mr-3"></i>+917030665933</p>
         <p>
